Increase page width to 65em to fix nav wrapping

--- a/assets/static/css/custom.css
+++ b/assets/static/css/custom.css
@@ -8,6 +8,10 @@
 
 
 /* Additional custom CSS for the website. */
+:root {
+  --page-width: 65em;
+}
+
 body {
   font-family: 'Berkeley Mono', monospace;
 }
